Program name transformations should not be applied to $EXEEXT.
* Makefile.in (EMACS, EMACSFULL):
* lib-src/Makefile.in (install, uninstall):
Transformations should not be applied to $EXEEXT.

--- a/Makefile.in
+++ b/Makefile.in
@@ -259,8 +259,8 @@ GZIP_INFO = @GZIP_INFO@
 TRANSFORM = @program_transform_name@
 
 # What emacs should be called when installed.
-EMACS = `echo emacs${EXEEXT} | sed '$(TRANSFORM)'`
-EMACSFULL = `echo emacs-${version}${EXEEXT} | sed '$(TRANSFORM)'`
+EMACS = `echo emacs | sed '$(TRANSFORM)'`${EXEEXT}
+EMACSFULL = `echo emacs-${version} | sed '$(TRANSFORM)'`${EXEEXT}
 
 # Subdirectories to make recursively.
 SUBDIR = lib lib-src src lisp leim
