Fix bug #12805 with compilation error in the cygw32 build.
 src/makefile.w32-in ($(BLD)/w32fns.$(O)): Depend on $(NT_INC)/unistd.h.
 src/w32fns.c Include unistd.h, to avoid compiler warnings on Cygwin.
 (emacs_abort) [CYGWIN]: Don't call _open_osfhandle; instead, use
 file descriptor 2 for standard error.

--- a/src/makefile.w32-in
+++ b/src/makefile.w32-in
@@ -1564,6 +1564,7 @@ $(BLD)/w32fns.$(O) : \
 	$(SRC)/w32.h \
 	$(SRC)/w32common.h \
 	$(SRC)/w32heap.h \
+	$(NT_INC)/unistd.h \
 	$(BUFFER_H) \
 	$(CCL_H) \
 	$(CHARACTER_H) \
