lib/makefile.w32-in, src/makefile.w32-in: Trivial reordering of entries.

--- a/src/makefile.w32-in
+++ b/src/makefile.w32-in
@@ -1475,8 +1475,8 @@ $(BLD)/unexw32.$(O) : \
 	$(SRC)/w32.h \
 	$(SRC)/w32common.h \
 	$(SRC)/w32heap.h \
-	$(LISP_H) \
-	$(CONFIG_H)
+	$(CONFIG_H) \
+	$(LISP_H)
 
 $(BLD)/vm-limit.$(O) : \
 	$(SRC)/vm-limit.c \
